--- a/MeuSiteExemplo/Views/Home/Index.cshtml
+++ b/MeuSiteExemplo/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
     </div>
     <div class="col-md-4">
         <h2>Web Hosting</h2>
-        <p>Teste mudandando o código.</p>
+        <p>Teste mudando o código.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
