--- a/MeuSiteExemplo/Views/Home/Index.cshtml
+++ b/MeuSiteExemplo/Views/Home/Index.cshtml
@@ -4,25 +4,25 @@
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p class="lead">ASP.NET é uma estrutura da Web gratuita para criar ótimos sites e aplicativos da Web usando HTML, CSS e JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Começando</h2>
         <p>
             telegrama
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>Obter Mais Bibliotecas</h2>
+        <p>NuGet é uma extensão gratuita do Visual Studio que facilita adicionar, remover e atualizar bibliotecas e ferramentas em projetos do Visual Studio.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
+        <h2>Hospedagem Na Web</h2>
         <p>Teste mudando o código.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
