--- a/MeuSiteExemplo/Views/Home/Index.cshtml
+++ b/MeuSiteExemplo/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Site Ronny";
+    ViewBag.Title = "Nosso Site";
 }
 
 <div class="jumbotron">
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <h2>Começando</h2>
         <p>
-            telegrama
+            Mensagem
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
@@ -23,7 +23,7 @@
     </div>
     <div class="col-md-4">
         <h2>Hospedagem Na Web</h2>
-        <p>Teste mudando o código.</p>
+        <p>Alterando esta parte do código.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
